selfhost/test/typechecker/for/error_bad_iterator_unfilled_hole.out
Error at %FILE_NAME%:1:10
Forbidden type for for-loop target
  |  for x in [] {
              ^
Type '<unknown>[]' has unfilled holes
