selfhost/test/typechecker/for/error_bad_iterator_unfilled_hole.abra
for x in [] {
  val _: Int = x
}